--- a/HTML/templates/footer.html
+++ b/HTML/templates/footer.html
@@ -7,8 +7,7 @@
     </div>
     <div id="footer-container2">
         <p class="info-text">Contacto</p>
-        <p>Email: <a href="https://skeleton.com">namesurname@gmail.com</a></p>
+        <p>Email: <a href="#">namesurname@gmail.com</a></p>
         <p>Telf: +34 12345678</p>
     </div>
 </section>
-
