--- a/HTML/views/job-seeker-profile-company.html
+++ b/HTML/views/job-seeker-profile-company.html
@@ -10,8 +10,7 @@
 
         <link rel="stylesheet" href="/CSS/general-style.css">
         <link rel="stylesheet" href="/CSS/headers.css">
-        <link rel="stylesheet" href="/CSS/search-bar-style.css">
-        <link rel="stylesheet" href="/CSS/company-list-styles.css">
+        <link rel="stylesheet" href="/CSS/profiles-style.css">
         <link rel="stylesheet" href="/CSS/footer-style.css">
     </head>
     <body>
@@ -22,7 +21,7 @@
             <section id="main-tittle" xlu-include-file="/HTML/templates/main-tittle.html">
             </section>
 
-            <main id="job-listing-content" xlu-include-file="/HTML/templates/company-job-listing-list.html">
+            <main id="job-listing-content" xlu-include-file="/HTML/templates/job-seeker-profile-view.html">
             </main>
 
             <footer id="footer" xlu-include-file="/HTML/templates/footer.html">
