--- a/HTML/views/vacancy-view-company.html
+++ b/HTML/views/vacancy-view-company.html
@@ -10,21 +10,22 @@
 
     <link rel="stylesheet" href="/CSS/general-style.css">
     <link rel="stylesheet" href="/CSS/headers.css">
-    <link rel="stylesheet" href="/CSS/job-seeker-list-style.css">
-    <link rel="stylesheet" href="/CSS/search-bar-style.css">
-    <link rel="stylesheet" href="/CSS/footer-style.css">
-    <link rel="stylesheet" href="/CSS/headers.css">
+    <link rel="stylesheet" href="/CSS/vacancy-toggle-nav-style.css">
     <link rel="stylesheet" href="/CSS/profiles-style.css">
+    <link rel="stylesheet" href="/CSS/footer-style.css">
 </head>
 <body>
     <div id="wrapper">
         <header id="sign_header" xlu-include-file="/HTML/templates/company-header.html">
         </header>
 
-        <section id="main-tittle" xlu-include-file="/HTML/templates/main-tittle.html">
+        <section id="main-subtitle" xlu-include-file="/HTML/templates/main-subtitle.html">
         </section>
 
-        <main id="job-listing-content" xlu-include-file="/HTML/templates/profile.html">
+        <nav id="vacancy-toggle-nav" xlu-include-file="/HTML/templates/company-vacancy-toggle-nav.html">
+        </nav>
+
+        <main id="profile-vacant-content" xlu-include-file="/HTML/templates/vacancy-profile-edit.html">
         </main>
 
         <footer id="footer" xlu-include-file="/HTML/templates/footer.html">
