--- a/CSS/search-bar-style.css
+++ b/CSS/search-bar-style.css
@@ -1,6 +1,6 @@
 .navigation-bar {
-    width: 100vw;
-    padding: 10px;
+    width: 100%;
+    padding: 0;
     display: flex;
     align-items: center;
 }
@@ -11,7 +11,6 @@
     border: none;
     font-size: 16px;
     border-bottom: 1px solid #aaabaf;
-    width: calc(100% - 120px);
     background: #f5f5f5;
 }
 
