--- a/CSS/sign-form-style.css
+++ b/CSS/sign-form-style.css
@@ -1,15 +1,17 @@
 .sign-page-container {
+    padding: 15vh 0 10vh 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 80vh;
     width: 100%;
+    min-height: 50vh;
 }
 
 .sign-box {
     text-align: center;
-    width: 45vh;
+    width: 23vw;
+    min-width: 200px;
 }
 
 .sign-toggle-nav {
