--- a/HTML/templates/company-sign-in.html
+++ b/HTML/templates/company-sign-in.html
@@ -1,28 +1,28 @@
 <main class="sign-page-container">
-  <nav class="sign-toggle-nav">
-    <a href="../views/sign-in-job-seeker.html" class="sign-toggle-button">Job Seeker</a>
-    <a href="#" class="sign-toggle-button active">Company</a>
-  </nav>
+    <nav class="sign-toggle-nav">
+        <a href="#" onclick="redirectToJobSeekerSignIn(event, this)" class="sign-toggle-button">Job Seeker</a>
+        <a href="#" class="sign-toggle-button active">Company</a>
+    </nav>
 
-  <section class="sign-box">
-    <div class="title-text">
-      <h1>Welcome back</h1>
-    </div>
+    <section class="sign-box">
+        <div class="title-text">
+            <h1>Welcome back</h1>
+        </div>
 
-    <section class="sign-entry-form">
-      <form>
-        <label for="email">Email Address</label>
-        <input type="email" id="email" placeholder="Enter email address" required>
+        <section class="sign-entry-form">
+            <form>
+                <label for="email">Email Address</label>
+                <input type="email" id="email" placeholder="Enter email address" required>
 
-        <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Enter password" required>
+                <label for="password">Password</label>
+                <input type="password" id="password" placeholder="Enter password" required>
 
-        <button type="submit" class="submit-button">Login</button>
-      </form>
+                <button type="submit" class="submit-button" onclick="redirectToJobListingCompany(event, this)">Login</button>
+            </form>
+        </section>
+
+        <div class="bottom-text">
+            <p>Don’t have an account? <a href="#" onclick="redirectToCompanySignUp(event, this)">Sign Up</a></p>
+        </div>
     </section>
-
-    <div class="bottom-text">
-      <p>Don’t have an account? <a href="../views/sign-up-company.html">Sign Up</a></p>
-    </div>
-  </section>
 </main>
