--- a/HTML/templates/job-seeker-find-jobs-list.html
+++ b/HTML/templates/job-seeker-find-jobs-list.html
@@ -28,23 +28,7 @@
     <section class="job-list">
         <h2>All Jobs</h2>
 
-        <div class="job-card">
-            <div class="logo"><img src="../../images/asps.png" alt="Placeholder X"></div>
-            <div class="job-info">
-                <h3>Lorem ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-        </div>
-
-        <div class="job-card">
-            <div class="logo"><img src="../../images/asps.png" alt="Placeholder X"></div>
-            <div class="job-info">
-                <h3>Lorem ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-        </div>
-
-        <div class="job-card">
+        <div class="job-card" onclick="redirectToVacancyViewJobSeeker(event, this)">
             <div class="logo"><img src="../../images/asps.png" alt="Placeholder X"></div>
             <div class="job-info">
                 <h3>Lorem ipsum</h3>
