--- a/HTML/templates/job-seeker-header.html
+++ b/HTML/templates/job-seeker-header.html
@@ -1,16 +1,24 @@
-<header id="job-seeker-header" >
-  <section class="display-section">
-    <section  class="display-section">
-      <img src="/images/asps.png" class="login-section" alt="image">
+<header id="job-seeker-header">
+    <section class="display-section">
+        <section class="display-section">
+            <img src="/images/asps.png" class="login-section" alt="image">
+        </section>
     </section>
-  </section>
     <section class="job-seeker-buttons-section">
-      <section class="job-seeker-find-jobs-button-section">
-        <button class="job-seeker-find-jobs-button" >Find a job</button>
-      </section>
-      <section class="section-button-job-seeker-button">
-        <img src="" id="imgJobSeeker" alt="image"><button class="job-seeker-profile-button"><b class="color-name">Name</b><br>email@example.com</button></img>
-      </section>
+        <section class="job-seeker-find-jobs-button-section">
+            <button class="job-seeker-find-jobs-button" onclick="redirectToFindJobsJobSeeker(event, this)">Find a job</button>
+        </section>
+
+        <section class="section-button-job-seeker-button">
+            <img src="/images/user.png" id="imgJobSeeker" alt="Profile Picture">
+            <button class="job-seeker-profile-button">
+                <b class="color-name">Name</b><br>email@example.com
+            </button>
+
+            <div class="popup-menu">
+                <button class="popup-btn" onclick="redirectToJobSeekerProfileJobSeeker(event, this)">Editar perfil</button>
+                <button class="popup-btn logout" onclick="redirectToMainPage(event, this)">Cerrar sesión</button>
+            </div>
+        </section>
     </section>
-  </section>
 </header>
