--- a/HTML/templates/main-page-header.html
+++ b/HTML/templates/main-page-header.html
@@ -6,8 +6,8 @@
           </section>
           <section class="display-section">
             <section class="buttons-main-page-section">
-              <button class="buttons-main-page">Login</button>
-              <button class="buttons-main-page"> Sign Up</button>
+              <button class="buttons-main-page" onclick="redirectToJobSeekerSignIn(event, this)">Login</button>
+              <button class="buttons-main-page" onclick="redirectToJobSeekerSignUp(event, this)"> Sign Up</button>
             </section>
           </section>
  </header>
