--- a/HTML/views/vacancy-view-job-seeker.html
+++ b/HTML/views/vacancy-view-job-seeker.html
@@ -9,24 +9,22 @@
     <script src="/JS/xlu-include-file.js"></script>
 
     <link rel="stylesheet" href="/CSS/general-style.css">
-    <link rel="stylesheet" href="/CSS/vacancy-toggle-nav-style.css">
-    <link rel="stylesheet" href="/CSS/company-list-styles.css">
-    <link rel="stylesheet" href="/CSS/footer-style.css">
     <link rel="stylesheet" href="/CSS/headers.css">
     <link rel="stylesheet" href="/CSS/profiles-style.css">
+    <link rel="stylesheet" href="/CSS/footer-style.css">
 </head>
 <body>
     <div id="wrapper">
-        <header id="sign_header" xlu-include-file="/HTML/templates/company-header.html">
+        <header id="sign_header" xlu-include-file="/HTML/templates/job-seeker-header.html">
         </header>
+
+        <section id="main-tittle" xlu-include-file="/HTML/templates/main-tittle.html">
+        </section>
 
         <section id="main-subtitle" xlu-include-file="/HTML/templates/main-subtitle.html">
         </section>
 
-        <nav id="vacancy-toggle-nav" xlu-include-file="/HTML/templates/company-vacancy-toggle-nav.html">
-        </nav>
-
-        <main id="profile-vacant-content" xlu-include-file="/HTML/templates/profileVacant.html">
+        <main id="job-listing-content" xlu-include-file="/HTML/templates/vacancy-profile-view.html">
         </main>
 
         <footer id="footer" xlu-include-file="/HTML/templates/footer.html">
